website/i18n/zh-CN/docusaurus-plugin-content-docs/version-3.0.1/api/plugins/plugin-ideal-image.mdx
---
sidebar_position: 8
slug: /api/plugins/@docusaurus/plugin-ideal-image
---

# 📦 plugin-ideal-image

import APITable from '@site/src/components/APITable';

用于生成近乎理想图像（响应式、懒加载及低质量占位图）的Docusaurus插件。

:::info

默认情况下，该插件在开发环境中处于**非激活状态**，以便您始终能查看全尺寸图像。如需调试理想图像行为，可将[`disableInDev`](#disableInDev)选项设为`false`。

:::

## 安装 {#installation}

```bash npm2yarn
npm install --save @docusaurus/plugin-ideal-image
```

## 使用方式 {#usage}

本插件仅支持PNG和JPG格式。

```jsx
import Image from '@theme/IdealImage';
import thumbnail from './path/to/img.png';

// your React code
<Image img={thumbnail} />

// or
<Image img={require('./path/to/img.png')} />
```

:::warning

该插件注册的[Webpack加载器](https://webpack.js.org/loaders/)会改变导入/请求图像的类型：

- 修改前：`string`
- 修改后：`{preSrc: string, src: import("@theme/IdealImage").SrcImage}`

:::

## 配置项 {#configuration}

可接受字段：

<APITable>

| Option | Type | Default | Description |
| --- | --- | --- | --- |
| `name` | `string` | `ideal-img/[name].[hash:hex:7].[width].[ext]` | Filename template for output files. |
| `sizes` | `number[]` | _original size_ | Specify all widths you want to use. If a specified size exceeds the original image's width, the latter will be used (i.e. images won't be scaled up). |
| `size` | `number` | _original size_ | Specify one width you want to use; if the specified size exceeds the original image's width, the latter will be used (i.e. images won't be scaled up) |
| `min` | `number` |  | As an alternative to manually specifying `sizes`, you can specify `min`, `max` and `steps`, and the sizes will be generated for you. |
| `max` | `number` |  | See `min` above |
| `steps` | `number` | `4` | Configure the number of images generated between `min` and `max` (inclusive) |
| `quality` | `number` | `85` | JPEG compression quality |
| `disableInDev` | `boolean` | `true` | You can test ideal image behavior in dev mode by setting this to `false`. **Tip**: use [network throttling](https://www.browserstack.com/guide/how-to-perform-network-throttling-in-chrome) in your browser to simulate slow networks. |

</APITable>

### 配置示例 {#ex-config}

以下是配置示例：

```js title="docusaurus.config.js"
export default {
  plugins: [
    [
      '@docusaurus/plugin-ideal-image',
      // highlight-start
      {
        quality: 70,
        max: 1030, // max resized image's size.
        min: 640, // min resized image's size. if original is lower, use that size.
        steps: 2, // the max number of images generated between min and max (inclusive)
        disableInDev: false,
      },
      // highlight-end
    ],
  ],
};
```